# opendataloader-pdf-llamaindex

./: .gitignore  CHANGELOG.md  NOTICE  README.md  pyproject.toml
.claude/: review-loop.json  review-rounds.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: lint.yml  release.yml  test-full.yml  test.yml
docs/: OpenDataLoaderPDFReaderDemo.ipynb
llama_index/readers/opendataloader_pdf/: __init__.py  base.py
tests/: conftest.py  test_integration.py  test_readers_opendataloader_pdf.py
